src/sass/layout/_main.scss
// Variables
$default-padding: 6rem;

// Base
h1,
h2,
h3,
h4,
h5,
h6,
p,
.header-main,
.boxes {
  max-width: $grid-base;
  margin-left: auto;
  margin-right: auto;
  padding-left: 2rem;
  padding-right: 2rem;
}

h2,
h3 {
  @extend %h4;
}

.wrapper {
  margin-top: 30%;

  @media(min-width: $container-ipad) {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100vh;
    flex-wrap: wrap;
    margin-top: 0;
  }
}

.header-main {
  margin-top: 0;
  margin-bottom: 0;
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  text-align: center;

  @media(max-width: $container-ipad) {
    margin-top: $default-padding;
    margin-bottom: $default-padding;
  }

  h1 {
    @extend %h5;
    width: 100%;
    color: #2f3060;
    margin-bottom: 2rem;
    order: 2;
    display: block;
  }

  img {
    margin-left: auto;
    margin-right: auto;
    order: 1;
    width: 8rem;
    height: 8rem;
    border-radius: 50%;
    display: block;
  }

  p {
    order: 3;
    font-size: 16px;
    color: #222;
    margin: 0;
    max-width: 50rem;
    margin-left: auto;
    margin-right: auto;
    line-height: 1.3;
  }

  .some {
    margin-top: 1rem;
    display: block;

    a {
      margin-right: 3px;
      margin-left: 3px;
    }

    a:after {
      display: none;
    }
  }

  a {
    position: relative;
    color: #4b6584;
    text-decoration: none;

    &:after {
      position: absolute;
      width: 100%;
      height: 2px;
      background: #4b6584;
      content: '';
      bottom: -2px;
      left: 0;
      transition: all .33s ease-in-out;
      opacity: 1;
    }

    &:hover {
      &:after {
        width: 0;
        opacity: .4;
      }
    }
  }
}

// Chat stuff
.keyreply-brand {
  display: none;
}

.keyreply-launcher {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='26' height='26' viewBox='0 0 26 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cellipse fill='%234b6584' cx='13' cy='13' rx='12' ry='12'/%3E%3Cpath d='M6.798 15.503l1.453-.92c.617.215 1.29.334 2 .334 2.898 0 5.247-1.996 5.247-4.46 0-2.46-2.35-4.457-5.248-4.457C7.35 6 5 7.996 5 10.458c0 1.446.81 2.73 2.065 3.545l-.503 1.273c-.038.03-.062.076-.062.127 0 .09.074.162.166.162.054 0 .1-.024.132-.062z' stroke='%234b6584' stroke-width='.2' fill='%23FFF'/%3E%3Cpath d='M20.297 18.97l.04-.065-.578-1.155c1.066-.814 1.737-1.993 1.737-3.305 0-2.455-2.35-4.445-5.248-4.445-2.9 0-5.25 1.99-5.25 4.445s2.35 4.445 5.25 4.445c.838 0 1.63-.167 2.334-.463l1.39.756c.035.05.095.085.163.085.107 0 .194-.085.194-.19 0-.04-.012-.076-.033-.107z' stroke='%234b6584' stroke-width='.2' fill='%23FFF'/%3E%3C/g%3E%3C/svg%3E") !important;
  background-color: #4b6584 !important;
}

